# AI-model

./: README.md
model_train/: export_model.py  model_precision.py  train_in_local.py  trian_in_cloud.py  unzip.py
model_train/best_test_saved_model/: best_test_dynamic_range_quant.tflite  best_test_integer_quant.tflite  fingerprint.pb
model_train/best_test_saved_model/variables/: variables.data-00000-of-00001
model_train/fall_saved_model/: fall_int8.tflite  fall_integer_quant.tflite  fingerprint.pb  metadata.yaml
model_train/fall_saved_model/variables/: variables.index
raspi_tflite/: CMakeLists.txt  best_test_full_integer_quant.tflite  main.cpp
yolo_with_rtsp/crtsp/: CMakeLists.txt
yolo_with_rtsp/crtsp/src/: main.cpp
